# ref. https://github.com/numpy/numpy/blob/main/numpy/_core/code_generators/cversions.txt
# for C_ABI_VERSION compatibility,
# and https://github.com/numpy/numpy/releases for python / numpy version compatibility
[build-system]
build-backend = "cmeel"
requires = [
  "cmeel[build] @ git+https://github.com/cmake-wheel/cmeel.git",
  "numpy >=1.26, <2 ; python_version < '3.9'",
  "numpy >=2, <2.1 ; python_version >= '3.9', < '3.10'",
  "numpy >=2.2, <2.4 ; python_version >= '3.10'",
]

[project]
dependencies = [
  "numpy >=1.26, <2 ; python_version < '3.9'",
  "numpy >=2, <2.1 ; python_version >= '3.9', < '3.10'",
  "numpy >=2.2, <2.3 ; python_version >= '3.10'"
]
description = "cmeel distribution for boost, which provides free peer-reviewed portable C++ source libraries."
license = "BSL-1.0"
name = "cmeel-boost"
requires-python = ">= 3.8"
version = "1.87.0"

[project.urls]
homepage = "https://github.com/cmake-wheel/cmeel-boost"
repository = "https://github.com/cmake-wheel/cmeel-boost.git"
upstream = "https://www.boost.org/"

[tool.cmeel]
run-tests = false

[tool.tomlsort]
all = true
